--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-labrador = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-labrador = "6"
 
 LAYERDEPENDS_meta-labrador = "core"
-LAYERSERIES_COMPAT_meta-labrador = "dunfell"
+LAYERSERIES_COMPAT_meta-labrador = "gatesgarth"
